fix z-index to put new-tag-dialog above tag-tree

--- a/src/main/webapp/static/css/navbar.css
+++ b/src/main/webapp/static/css/navbar.css
@@ -77,6 +77,10 @@ input[name=q]{
   width: 100%;
 }
 
+#new-tag-dialog{
+  z-index: 2000;
+}
+
 #new-tag-dialog .modal-dialog{
   width: 300px;
   min-height: 100px;
